# LISA

./:  Jules technical_report.md.rtf  # ISA Project_ Co-Designed complete chat history 11-6.txt  .audit_threshold.json  .bandit  .codespell-ignore  .commitlintrc.yml  .coveragerc  .env  .env.example  .firebaserc  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .rooignore  .secrets.baseline  .yamllint  API keys.rtf  BLUEPRINT-COPY 1-6-2025.rtf  CHANGELOG.md  CODEOWNERS  COHERENCE_SCORECARD.md  CONTRIBUTING.md  Codex for ISA Development_.txt  Dockerfile  Firebase ISA Setup Common Problems_ (1).txt  GS1 Data en AI.txt  GS1_System_Architecture.textClipping  ISA 20.1.docx  ISA RooCode setup.txt  ISA-roadmap_ Kritische Criteria en Automatisering_.txt  ISA_ Codex Review and Discovery_.txt  ISA_Deep_Research_Prompts 2.md  ISA_Full_Phase_Roadmap.md  ISA_Roadmap_Full_Expanded.md  ISA_Roo_Definitive_Architecture_v1.md  Intelligent Standards Assistant (ISA) - Firebase Studio.html  Jules chat history.rtf  Jules technical_report of ISA for firebase 7-7-2025.md  MAINTENANCE_LOG.md  (+105 more)
ISA_C_full_refactored/work_ISA_C_full/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Gemini.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md
ISA_C_full_refactored/work_ISA_C_full/autodev/: agent.py  llm_providers.py  main.py  markdown_io.py  state.py
ISA_C_full_refactored/work_ISA_C_full/configs/: settings.yml
ISA_C_full_refactored/work_ISA_C_full/docs/: README_en.md  README_nl.md
ISA_C_full_refactored/work_ISA_C_full/isa_c/: __main__.py  cli.py
ISA_C_full_refactored/work_ISA_C_full/tests/: test_smoke.py
ISA_SuperApp/: AGENTS.md  COPILOT_DEPLOY.prompt.md  DEV_SETUP.md  Dockerfile  GEMINI.md  ISA_SuperDesign_VSCode_Copilot_OneShot_2025-08-17.zip.txt  README.md  VERSION  __init__.py  __main__.py  audit_report.md  cli.py  docker-compose.yml  main.py  memory.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  retrieval.py  run_isa_server.txt  tmp_index.json  tmp_mem.json  vector_store.py  vector_stores.py  version.py
ISA_SuperApp/ISA_gemini_orchestrator_patch_2025-08-20/: CHANGELOG.md
ISA_SuperApp/ISA_gemini_orchestrator_patch_2025-08-20/.gemini/: workspace.json
ISA_SuperApp/ISA_gemini_orchestrator_patch_2025-08-20/docs/: PROJECT_MEMORY.md
ISA_SuperApp/ISA_gemini_orchestrator_patch_2025-08-20/scripts/: smoke_test.py  start_isa_servers.sh  verify_credentials.py
ISA_SuperApp/agent/memory/: memory_log.jsonl
ISA_SuperApp/agents/: __init__.py  base.py  memory.py  orchestrator.py  specialized.py
ISA_SuperApp/artifacts/docs/: 1755530172_ESG_Brief.md
ISA_SuperApp/catalog/: datapackage.json  dcat-ap.jsonld  iso11179_elements.csv
ISA_SuperApp/core/: __init__.py  agent_system.py  api.py  app.py  base_agent.py  config.py  embedding.py  exceptions.py  logger.py  logging_config.py  memory_optimized_vector_store.py  metrics.py  models.py  rerank.py  retrieval.py  security.py  validation.py  vector_store.py  workflow.py
ISA_SuperApp/desktop/electron/: package.json
ISA_SuperApp/docs/: ci_secrets.md  config.md  development_practices.md  documents-and-chat.md  graph-explorer.md  index.md  install.md  quickstart.md  roadmap.md  user-guide.md
ISA_SuperApp/docs/agents/: AGENTS.md  GEMINI.md  MEMORY_ARCHITECTURE.md  maintenance_playbook.md
ISA_SuperApp/docs/data/: retrieval.md  scheduler.md
ISA_SuperApp/docs/dev/: api.md  architecture.md  memory.md  packaging.md  structure.md  style.md  testing.md  workflows.md
ISA_SuperApp/docs/ops/: metrics.md  security.md
ISA_SuperApp/etl/: README.md  __init__.py  config.yaml  definitions.py  openlineage_config.py  pyproject.toml  requirements.txt  resources.py  test_etl.py  workspace.yaml
ISA_SuperApp/etl/assets/: __init__.py  esma.py  eurostat.py  storage.py  transformations.py
ISA_SuperApp/etl/core/: __init__.py  exceptions.py  logger.py  vector_store.py
ISA_SuperApp/gemini-cli-main/: GEMINI.md  ROADMAP.md  SECURITY.md
ISA_SuperApp/gemini-cli-main/.github/: pull_request_template.md
ISA_SuperApp/gemini-cli-main/docs/: architecture.md  extension.md  ide-integration.md  index.md  integration-tests.md  issue-and-pr-automation.md  keyboard-shortcuts.md  quota-and-pricing.md  telemetry.md  tos-privacy.md
ISA_SuperApp/governance/: licenses.md
ISA_SuperApp/infra/local/: compose.minio.pg.yml
ISA_SuperApp/infra/terraform/: main.tf
ISA_SuperApp/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  openai_provider.py
ISA_SuperApp/orchestrator/: base.py
ISA_SuperApp/provenance/: prov-run.jsonld
ISA_SuperApp/retrieval/: base.py  contextual_retriever.py  hybrid_retriever.py  multi_query_retriever.py  query_expansion.py  rag_retriever.py  re_ranking.py
ISA_SuperApp/schemas/: openapi.yaml  schema.graphql
ISA_SuperApp/schemas/json/: product.schema.json
ISA_SuperApp/schemas/rdf/: ontology.ttl
ISA_SuperApp/scripts/: bootstrap.sh  bootstrap_vscode.sh  check_env.py  decrypt_env.sh  encrypt_env.sh  generate_tokens.py  make_rag_packs.py  normalize_path_entries.py  poc_run.sh  publish_github.sh  run.sh  sanitize_zsh_path.py  smoke_test  smoke_test.py  start_isa_app.sh  start_isa_servers  targeted_sanitize.py  test.sh  verify_credentials
ISA_SuperApp/site/: 404.html  index.html  sitemap.xml
ISA_SuperApp/src/: api_server.py  assistant.py  auth.py  llm_client.py  logging_conf.py  memory_store.py  metrics.py  reasoning.py  retrieval.py  scheduler.py
ISA_SuperApp/storage/: index.json
ISA_SuperApp/system-prompts-and-models-of-ai-tools-main/: LICENSE.md  README.md
ISA_SuperApp/tests/: conftest.py  test_dev_files.py
ISA_SuperApp/vector_store/: base.py  chroma_store.py  embeddings.py  hybrid_store.py  pinecone_store.py
ISA_SuperApp/vector_stores/: base.py  chroma_store.py  faiss_store.py  memory_store.py
ISA_SuperApp/webui/: admin.html  alerts.html  app_admin.js  graph.html
src/llm/: README.md  pyproject.toml
src/orchestrator/: README.md  pyproject.toml  research_graph.py
(+1277 files in other folders)
