[metadata]
name = isa-superapp
version = 0.1.0
description = ISA SuperApp - Intelligent System Architecture
long_description = file: README.md
long_description_content_type = text/markdown
author = ISA Team
author_email = team@isa-superapp.com
url = https://github.com/isa-superapp/isa-superapp
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include = isa_superapp*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-html>=3.2.0
    pytest-xdist>=3.3.0
    pytest-timeout>=2.1.0
    pytest-mock>=3.11.0
    black>=23.11.0
    isort>=5.12.0
    mypy>=1.7.0
    flake8>=6.0.0
    bandit>=1.7.0
    safety>=2.3.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    env,
    .env,
    migrations,
    build,
    dist,
    *.egg-info
per-file-ignores =
    __init__.py:F401
    tests/*:S101
    run_research_crew.py:E402

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = isa_superapp
known_third_party = pytest,asyncio,aiohttp,fastapi,pydantic

[black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = /(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True
namespace_packages = True
explicit_package_bases = True

[mypy-tests.*]
disallow_untyped_defs = False
check_untyped_defs = True

[mypy-*.migrations.*]
ignore_errors = True

[bandit]
exclude_dirs = tests,migrations,venv,.venv,env,.env
skips = B101,B601

[tool:pytest]
# Test discovery
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

# Coverage configuration
addopts =
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --durations=10
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml:coverage.xml

# Coverage settings
[coverage:run]
source = isa_superapp
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */env/*
    */.venv/*
    */.env/*
    setup.py
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\\(Protocol\\):
    @(abc\\.)?abstractmethod

[coverage:html]
directory = htmlcov
