[tool.black]
line-length = 100
target-version = ["py311"]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E","F","W","I","UP"]
ignore = ["E203","E501"]
fix = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
