[tool.black]
line-length = 100
target-version = ["py311"]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["__MACOSX", "._*"]

[tool.ruff.lint]
select = ["E","F","W","I","UP"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
