[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isa_c"
version = "0.1.0"
description = "ISA_C ESG data pipeline with adapters, optional Prefect & DuckDB idempotency, and robust tooling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ISA_C Team" }]
dependencies = [
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "requests>=2.31",
    "aiohttp>=3.9",
    "diskcache>=5.6",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
delta = ["duckdb>=0.10"]
prefect = ["prefect>=2.14"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10",
  "types-requests",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
extend-exclude = ["__MACOSX", "._*"]

[tool.ruff.lint]
select = ["E","F","W","I","B","C90","UP","TRY","PL","RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.isa_c]
default_modules = ["cellar","efrag","eurostat","sec","gs1","gs1nl"]


target-version = ["py311"]
line-length = 100

[tool.isort]
profile = "black"

line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","C4","SIM","PL","RUF"]
lint.ignore = ["E501"]
format.docstring-code-format = true

python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
no_implicit_optional = true

addopts = "-ra -q --cov=isa_c --cov-report=term-missing"
testpaths = ["tests"]
